<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="_My Profile_"
        android:textColor="#E64F4F50"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:typeface="serif"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="216dp"
                android:layout_height="185dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="NAME: ASHIF AYUB QUADARI"
                    android:textColor="#E64F4F50"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Mob: +917843821687, +917355467484"
                    android:textColor="#E64F4F50"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="E-mail:ashifkadri@gmail.com"
                    android:textColor="#E64F4F50"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="ADDRESS: GARETHA BHARARI MEJA ROAD\nPRAYAGRAJ 212303 UP"
                    android:textColor="#E64F4F50"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:rotation="0"
                    android:src="@drawable/ashif"
                    app:civ_border_color="#f556"
                    app:civ_border_width="2dp" />
            </LinearLayout>
        </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/objective"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/objective"
                android:textColor="#E64F4F50"
                android:typeface="serif" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="EDUCATION:"
                android:textColor="#E64F4F50"
                android:typeface="serif" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education1"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education2"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="TECHNICAL SKILLS:"
                android:textColor="#E64F4F50"
                android:typeface="serif" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/technical_skills"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/technical_skills1"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/technical_skills2"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/technical_skills3"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="APPRENTICESHIP:"
                android:textColor="#E64F4F50"
                android:typeface="serif" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Apprenticeship"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="STRENGTH:"
                android:textColor="#E64F4F50"
                android:typeface="serif"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strangth"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strangth1"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strangth2"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strangth3"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="PERSONAL DETAILS:"
                android:textColor="#E64F4F50"
                android:typeface="serif"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:layout_marginTop="8dp"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fname"
                    android:layout_marginTop="8dp"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indian"
                    android:layout_marginTop="8dp"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/single"
                    android:layout_marginTop="8dp"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobies"
                    android:layout_marginTop="8dp"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:text="DECLERATION:"
                android:textColor="#E64F4F50"
                android:typeface="serif" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/declearation"
                    android:textColor="#E64F4F50"
                    android:typeface="serif" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>

</LinearLayout>