<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_icons8_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_enquiry"
            android:icon="@drawable/ic_research_svgrepo_com"
            android:title="Enquiry" />
        <item
            android:id="@+id/nav_registration"
            android:icon="@drawable/ic_registration_desk_register_records_office_svgrepo_com"
            android:title="Registration" />
        <item
            android:id="@+id/nav_faculty"
            android:icon="@drawable/ic_teacher_svgrepo_com"
            android:title="Faculty" />
    </group>
    <item android:title="Extra Menues">
        <menu>
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_icons8_about"
            android:title="Login" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="Refer Ur Frnds:-" />
        <item
            android:id="@+id/nav_review"
            android:icon="@drawable/ic_preview_svgrepo_com"
            android:title="Review" />

        </menu></item>

</menu>